--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,67 +1,75 @@
 # 2023-11-07
 
-共 64 条
+共 72 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 01:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 07 2023 02:00:40 GMT+0800 (China Standard Time) -->
 1. [黑龙江体育馆坍塌3人被困](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌3人被困)
 1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
 1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
-1. [8岁女孩摸黑独自上学走1小时山路](https://so.toutiao.com/search?keyword=8岁女孩摸黑独自上学走1小时山路)
 1. [记者直击东北暴雪 雪太大没去成](https://so.toutiao.com/search?keyword=记者直击东北暴雪+雪太大没去成)
 1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
 1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
 1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
 1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
 1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
+1. [“爱达·魔都号”首航部分房型售罄](https://so.toutiao.com/search?keyword=“爱达·魔都号”首航部分房型售罄)
 1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
-1. [体育馆坍塌目击者：有两三人被抬出来](https://so.toutiao.com/search?keyword=体育馆坍塌目击者：有两三人被抬出来)
-1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
 1. [80岁老太遭邻居辱骂猝死](https://so.toutiao.com/search?keyword=80岁老太遭邻居辱骂猝死)
 1. [特朗普：为啥现在不谈乌克兰了](https://so.toutiao.com/search?keyword=特朗普：为啥现在不谈乌克兰了)
-1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
 1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
-1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
 1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
 1. [乌军举行颁奖仪式俄军导弹从天而降](https://so.toutiao.com/search?keyword=乌军举行颁奖仪式俄军导弹从天而降)
+1. [7旬老人花近5万按摩4根肋骨骨折](https://so.toutiao.com/search?keyword=7旬老人花近5万按摩4根肋骨骨折)
+1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
+1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
+1. [马斯克版ChatGPT来袭](https://so.toutiao.com/search?keyword=马斯克版ChatGPT来袭)
 1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
 1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
-1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
 1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
 1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
 1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
 1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
 1. [哈马斯在地道内存了多少弹药](https://so.toutiao.com/search?keyword=哈马斯在地道内存了多少弹药)
-1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
-1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
-1. [网友称母亲去世后不与所有亲戚来往](https://so.toutiao.com/search?keyword=网友称母亲去世后不与所有亲戚来往)
-1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
-1. [女子照顾嫂子生子每天下班帮带娃](https://so.toutiao.com/search?keyword=女子照顾嫂子生子每天下班帮带娃)
-1. [马斯克版ChatGPT来袭](https://so.toutiao.com/search?keyword=马斯克版ChatGPT来袭)
-1. [卢卡库绝杀后激情脱衣怒吼庆祝](https://so.toutiao.com/search?keyword=卢卡库绝杀后激情脱衣怒吼庆祝)
+1. [8岁女孩摸黑独自上学走1小时山路](https://so.toutiao.com/search?keyword=8岁女孩摸黑独自上学走1小时山路)
 1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
+1. [魅族Flyme系统是否应该改名引热议](https://so.toutiao.com/search?keyword=魅族Flyme系统是否应该改名引热议)
+1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
+1. [伊朗军演提及“准备扣动扳机”](https://so.toutiao.com/search?keyword=伊朗军演提及“准备扣动扳机”)
+1. [女子照顾嫂子生子每天下班帮带娃](https://so.toutiao.com/search?keyword=女子照顾嫂子生子每天下班帮带娃)
+1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
 1. [布林肯穿防弹背心去驻伊大使馆慰问](https://so.toutiao.com/search?keyword=布林肯穿防弹背心去驻伊大使馆慰问)
+1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
+1. [沙特将继续实施石油自愿减产措施](https://so.toutiao.com/search?keyword=沙特将继续实施石油自愿减产措施)
+1. [《追缉》张钧甯阮经天上演猫鼠游戏](https://so.toutiao.com/search?keyword=《追缉》张钧甯阮经天上演猫鼠游戏)
+1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
+1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
+1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
+1. [南京鼓楼医院塌方 系部分吊顶脱落](https://so.toutiao.com/search?keyword=南京鼓楼医院塌方+系部分吊顶脱落)
+1. [美国驻华大使进博会现场秀中文](https://so.toutiao.com/search?keyword=美国驻华大使进博会现场秀中文)
+1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
+1. [五大新车即将重磅上市](https://so.toutiao.com/search?keyword=五大新车即将重磅上市)
+1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
+1. [ASML中国总裁：对中国市场非常乐观](https://so.toutiao.com/search?keyword=ASML中国总裁：对中国市场非常乐观)
+1. [普京将参加明年总统选举？克宫回应](https://so.toutiao.com/search?keyword=普京将参加明年总统选举？克宫回应)
+1. [南京消防回应鼓楼医院天花板掉落](https://so.toutiao.com/search?keyword=南京消防回应鼓楼医院天花板掉落)
+1. [体育馆坍塌目击者：有两三人被抬出来](https://so.toutiao.com/search?keyword=体育馆坍塌目击者：有两三人被抬出来)
+1. [东北风雪有多猛？市民手牵手被吹翻](https://so.toutiao.com/search?keyword=东北风雪有多猛？市民手牵手被吹翻)
+1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
+1. [网友称母亲去世后不与所有亲戚来往](https://so.toutiao.com/search?keyword=网友称母亲去世后不与所有亲戚来往)
+1. [卢卡库绝杀后激情脱衣怒吼庆祝](https://so.toutiao.com/search?keyword=卢卡库绝杀后激情脱衣怒吼庆祝)
 1. [官方称体育馆房顶坍塌与降雪有关](https://so.toutiao.com/search?keyword=官方称体育馆房顶坍塌与降雪有关)
 1. [乌克兰天空现罕见血红色极光](https://so.toutiao.com/search?keyword=乌克兰天空现罕见血红色极光)
-1. [ASML中国总裁：对中国市场非常乐观](https://so.toutiao.com/search?keyword=ASML中国总裁：对中国市场非常乐观)
-1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
 1. [“始祖鸟平替”被年轻人疯抢](https://so.toutiao.com/search?keyword=“始祖鸟平替”被年轻人疯抢)
-1. [南京鼓楼医院塌方 系部分吊顶脱落](https://so.toutiao.com/search?keyword=南京鼓楼医院塌方+系部分吊顶脱落)
-1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
-1. [沙特将继续实施石油自愿减产措施](https://so.toutiao.com/search?keyword=沙特将继续实施石油自愿减产措施)
-1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
-1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
-1. [《追缉》张钧甯阮经天上演猫鼠游戏](https://so.toutiao.com/search?keyword=《追缉》张钧甯阮经天上演猫鼠游戏)
 1. [美大豆行业人士：要继续与中国合作](https://so.toutiao.com/search?keyword=美大豆行业人士：要继续与中国合作)
 1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
 1. [哈工大建“不怕雪”的暖廊](https://so.toutiao.com/search?keyword=哈工大建“不怕雪”的暖廊)
 1. [博主：全球经济衰退会维持几年](https://so.toutiao.com/search?keyword=博主：全球经济衰退会维持几年)
-1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
 1. [张镇麟22分 辽宁大胜天津夺6连胜](https://so.toutiao.com/search?keyword=张镇麟22分+辽宁大胜天津夺6连胜)
 1. [《以爱为营》郑书意时宴饭桌撒狗粮](https://so.toutiao.com/search?keyword=《以爱为营》郑书意时宴饭桌撒狗粮)
 1. [日方发布近9天山东舰每日动向](https://so.toutiao.com/search?keyword=日方发布近9天山东舰每日动向)
 1. [A股修复行情有望持续演绎](https://so.toutiao.com/search?keyword=A股修复行情有望持续演绎)
-1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
 1. [如何应对儿童肺炎支原体感染](https://so.toutiao.com/search?keyword=如何应对儿童肺炎支原体感染)
 1. [韩国为什么要禁止股票卖空](https://so.toutiao.com/search?keyword=韩国为什么要禁止股票卖空)
 1. [赛力斯三季报：实现营收166.8亿元](https://so.toutiao.com/search?keyword=赛力斯三季报：实现营收166.8亿元)
