--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,71 +1,89 @@
 # 2023-11-07
 
-共 102 条
+共 119 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 07:01:10 GMT+0800 (China Standard Time) -->
-1. [黑龙江体育馆坍塌3人被困](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌3人被困)
-1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
+<!-- 最后更新时间 Tue Nov 07 2023 08:24:42 GMT+0800 (China Standard Time) -->
+1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
+1. [官方称体育馆坍塌与降雪有关](https://so.toutiao.com/search?keyword=官方称体育馆坍塌与降雪有关)
 1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
 1. [记者直击东北暴雪 雪太大没去成](https://so.toutiao.com/search?keyword=记者直击东北暴雪+雪太大没去成)
-1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
-1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
+1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
+1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
 1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
+1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
+1. [球馆坍塌家长哭喊“我儿子在里面”](https://so.toutiao.com/search?keyword=球馆坍塌家长哭喊“我儿子在里面”)
+1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
 1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
+1. [博主：全球经济衰退会维持几年](https://so.toutiao.com/search?keyword=博主：全球经济衰退会维持几年)
+1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
 1. [男子碾死躺道闸杆下老太案二审宣判](https://so.toutiao.com/search?keyword=男子碾死躺道闸杆下老太案二审宣判)
 1. [特朗普：为啥现在不谈乌克兰了](https://so.toutiao.com/search?keyword=特朗普：为啥现在不谈乌克兰了)
+1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
+1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
+1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
+1. [坍塌体育馆系当地招商引资项目](https://so.toutiao.com/search?keyword=坍塌体育馆系当地招商引资项目)
+1. [热刺1-4遭切尔西逆转 吞联赛首败](https://so.toutiao.com/search?keyword=热刺1-4遭切尔西逆转+吞联赛首败)
+1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
+1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
+1. [哈马斯在地道内存了多少弹药](https://so.toutiao.com/search?keyword=哈马斯在地道内存了多少弹药)
+1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
+1. [女子种红薯未收完遭村民哄抢](https://so.toutiao.com/search?keyword=女子种红薯未收完遭村民哄抢)
+1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
+1. [东北人冬天离不开大白菜](https://so.toutiao.com/search?keyword=东北人冬天离不开大白菜)
+1. [女子照顾嫂子生子每天下班帮带娃](https://so.toutiao.com/search?keyword=女子照顾嫂子生子每天下班帮带娃)
+1. [撒贝宁靠儿时经验启动手扶拖拉机](https://so.toutiao.com/search?keyword=撒贝宁靠儿时经验启动手扶拖拉机)
+1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
+1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
+1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
+1. [8岁女孩摸黑独自上学走1小时山路](https://so.toutiao.com/search?keyword=8岁女孩摸黑独自上学走1小时山路)
+1. [欧盟将增加对加沙的人道主义援助](https://so.toutiao.com/search?keyword=欧盟将增加对加沙的人道主义援助)
+1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
+1. [老人低消费坐店内被赶 快餐店回应](https://so.toutiao.com/search?keyword=老人低消费坐店内被赶+快餐店回应)
+1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
+1. [黑龙江鹤岗雪后路面变“镜面”](https://so.toutiao.com/search?keyword=黑龙江鹤岗雪后路面变“镜面”)
+1. [坍塌体育馆一楼为篮球乒乓球场](https://so.toutiao.com/search?keyword=坍塌体育馆一楼为篮球乒乓球场)
+1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
+1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
+1. [给闫妮吓得都不微醺了](https://so.toutiao.com/search?keyword=给闫妮吓得都不微醺了)
+1. [媒体评小姐姐报警称被旅游搭子抛弃](https://so.toutiao.com/search?keyword=媒体评小姐姐报警称被旅游搭子抛弃)
+1. [专家：不是所有冷空气都叫寒潮](https://so.toutiao.com/search?keyword=专家：不是所有冷空气都叫寒潮)
+1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
+1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
+1. [两省迎来女性省委副书记](https://so.toutiao.com/search?keyword=两省迎来女性省委副书记)
+1. [加沙医院院长：儿童需接受心理治疗](https://so.toutiao.com/search?keyword=加沙医院院长：儿童需接受心理治疗)
+1. [大学扩招到底有错没](https://so.toutiao.com/search?keyword=大学扩招到底有错没)
+1. [刚插油枪未加油就计费？加油站回应](https://so.toutiao.com/search?keyword=刚插油枪未加油就计费？加油站回应)
+1. [黑龙江体育馆坍塌3人被困](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌3人被困)
 1. [中日友好医院是日本人建的？假的](https://so.toutiao.com/search?keyword=中日友好医院是日本人建的？假的)
-1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
 1. [网友称母亲去世后不与所有亲戚来往](https://so.toutiao.com/search?keyword=网友称母亲去世后不与所有亲戚来往)
 1. [乌军举行颁奖仪式俄军导弹从天而降](https://so.toutiao.com/search?keyword=乌军举行颁奖仪式俄军导弹从天而降)
-1. [8岁女孩摸黑独自上学走1小时山路](https://so.toutiao.com/search?keyword=8岁女孩摸黑独自上学走1小时山路)
-1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
-1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
 1. [哈尔滨学生在暴风雪中艰难行走](https://so.toutiao.com/search?keyword=哈尔滨学生在暴风雪中艰难行走)
-1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
-1. [斗鱼证实CEO陈少杰失联](https://so.toutiao.com/search?keyword=斗鱼证实CEO陈少杰失联)
 1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
 1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
 1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
 1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
-1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
-1. [哈马斯在地道内存了多少弹药](https://so.toutiao.com/search?keyword=哈马斯在地道内存了多少弹药)
 1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
 1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
-1. [女子种红薯未收完遭村民哄抢](https://so.toutiao.com/search?keyword=女子种红薯未收完遭村民哄抢)
-1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
-1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
 1. [《追缉》张钧甯阮经天上演猫鼠游戏](https://so.toutiao.com/search?keyword=《追缉》张钧甯阮经天上演猫鼠游戏)
 1. [五大新车即将重磅上市](https://so.toutiao.com/search?keyword=五大新车即将重磅上市)
-1. [女子照顾嫂子生子每天下班帮带娃](https://so.toutiao.com/search?keyword=女子照顾嫂子生子每天下班帮带娃)
 1. [漠河北极村再现神秘绿色极光](https://so.toutiao.com/search?keyword=漠河北极村再现神秘绿色极光)
-1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
 1. [耶路撒冷老城发生持刀袭击事件](https://so.toutiao.com/search?keyword=耶路撒冷老城发生持刀袭击事件)
 1. [南京鼓楼医院塌方 系部分吊顶脱落](https://so.toutiao.com/search?keyword=南京鼓楼医院塌方+系部分吊顶脱落)
 1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
-1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
-1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
-1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
 1. [网传杨紫李现或将二搭《国色芳华》](https://so.toutiao.com/search?keyword=网传杨紫李现或将二搭《国色芳华》)
-1. [给闫妮吓得都不微醺了](https://so.toutiao.com/search?keyword=给闫妮吓得都不微醺了)
 1. [克罗地亚外长亲吻德国外长被批耻辱](https://so.toutiao.com/search?keyword=克罗地亚外长亲吻德国外长被批耻辱)
-1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
 1. [王大雷：希望回到主场能再次取胜](https://so.toutiao.com/search?keyword=王大雷：希望回到主场能再次取胜)
 1. [英大使谈中国受邀参加AI峰会原因](https://so.toutiao.com/search?keyword=英大使谈中国受邀参加AI峰会原因)
 1. [广东一民房失火多人遇难含一孕妇](https://so.toutiao.com/search?keyword=广东一民房失火多人遇难含一孕妇)
 1. [监控下狗子的神操作](https://so.toutiao.com/search?keyword=监控下狗子的神操作)
 1. [江苏省纪委通报“内鬼”赵岳被查](https://so.toutiao.com/search?keyword=江苏省纪委通报“内鬼”赵岳被查)
-1. [博主：全球经济衰退会维持几年](https://so.toutiao.com/search?keyword=博主：全球经济衰退会维持几年)
-1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
 1. [山东大风寒潮双预警](https://so.toutiao.com/search?keyword=山东大风寒潮双预警)
 1. [山东发布一批人事任免名单](https://so.toutiao.com/search?keyword=山东发布一批人事任免名单)
 1. [2024年全球小麦玉米价格预计下跌](https://so.toutiao.com/search?keyword=2024年全球小麦玉米价格预计下跌)
-1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
 1. [冷空气影响持续 最低温0℃线南压](https://so.toutiao.com/search?keyword=冷空气影响持续+最低温0℃线南压)
 1. [东北多机场航班大面积取消](https://so.toutiao.com/search?keyword=东北多机场航班大面积取消)
-1. [专家：不是所有冷空气都叫寒潮](https://so.toutiao.com/search?keyword=专家：不是所有冷空气都叫寒潮)
 1. [体育馆坍塌目击者：有两三人被抬出来](https://so.toutiao.com/search?keyword=体育馆坍塌目击者：有两三人被抬出来)
-1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
 1. [伊朗军演提及“准备扣动扳机”](https://so.toutiao.com/search?keyword=伊朗军演提及“准备扣动扳机”)
 1. [拜登在五个关键州支持率比特朗普低](https://so.toutiao.com/search?keyword=拜登在五个关键州支持率比特朗普低)
 1. [外交部回应中美军控磋商情况](https://so.toutiao.com/search?keyword=外交部回应中美军控磋商情况)
@@ -73,7 +91,6 @@
 1. [9个月的姐姐第一次见弟弟动作好暖](https://so.toutiao.com/search?keyword=9个月的姐姐第一次见弟弟动作好暖)
 1. [布林肯穿防弹背心去驻伊大使馆慰问](https://so.toutiao.com/search?keyword=布林肯穿防弹背心去驻伊大使馆慰问)
 1. [乌克兰天空现罕见血红色极光](https://so.toutiao.com/search?keyword=乌克兰天空现罕见血红色极光)
-1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
 1. [支原体肺炎频发 专家支招防范](https://so.toutiao.com/search?keyword=支原体肺炎频发+专家支招防范)
 1. [“爱达·魔都号”首航部分房型售罄](https://so.toutiao.com/search?keyword=“爱达·魔都号”首航部分房型售罄)
 1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
