--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,53 +1,68 @@
 # 2023-11-07
 
-共 145 条
+共 157 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 10:16:44 GMT+0800 (China Standard Time) -->
-1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
-1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
-1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
-1. [哈尔滨11月6日降雪量突破历史极值](https://so.toutiao.com/search?keyword=哈尔滨11月6日降雪量突破历史极值)
-1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
+<!-- 最后更新时间 Tue Nov 07 2023 11:00:41 GMT+0800 (China Standard Time) -->
 1. [记者直击东北暴雪 雪太大没去成](https://so.toutiao.com/search?keyword=记者直击东北暴雪+雪太大没去成)
+1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
+1. [金融制度型开放释放鲜明信号](https://so.toutiao.com/search?keyword=金融制度型开放释放鲜明信号)
+1. [郑州鸵鸟出逃大结局来了](https://so.toutiao.com/search?keyword=郑州鸵鸟出逃大结局来了)
+1. [东北的风雪属实太猛了](https://so.toutiao.com/search?keyword=东北的风雪属实太猛了)
+1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
 1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
-1. [东北大学生冒雪上课走一步退三步](https://so.toutiao.com/search?keyword=东北大学生冒雪上课走一步退三步)
+1. [男子办移民材料 向境外传14份情报](https://so.toutiao.com/search?keyword=男子办移民材料+向境外传14份情报)
 1. [东北人展示家门口的雪有多厚](https://so.toutiao.com/search?keyword=东北人展示家门口的雪有多厚)
 1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
 1. [县领导3个月前曾到坍塌体育馆检查](https://so.toutiao.com/search?keyword=县领导3个月前曾到坍塌体育馆检查)
+1. [哈尔滨11月6日降雪量突破历史极值](https://so.toutiao.com/search?keyword=哈尔滨11月6日降雪量突破历史极值)
 1. [8岁女孩摸黑独自上学走1小时山路](https://so.toutiao.com/search?keyword=8岁女孩摸黑独自上学走1小时山路)
 1. [东北农民雪中抢收粮食](https://so.toutiao.com/search?keyword=东北农民雪中抢收粮食)
-1. [女孩与法国少年商场合奏惊艳外国人](https://so.toutiao.com/search?keyword=女孩与法国少年商场合奏惊艳外国人)
-1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
-1. [巴西父亲夺刀刺死威胁其孩子的摊贩](https://so.toutiao.com/search?keyword=巴西父亲夺刀刺死威胁其孩子的摊贩)
-1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
+1. [东北大学生冒雪上课走一步退三步](https://so.toutiao.com/search?keyword=东北大学生冒雪上课走一步退三步)
 1. [男子碾死躺道闸杆下老太案二审宣判](https://so.toutiao.com/search?keyword=男子碾死躺道闸杆下老太案二审宣判)
-1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
-1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
-1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
-1. [巴勒斯坦22岁活动家被以军逮捕](https://so.toutiao.com/search?keyword=巴勒斯坦22岁活动家被以军逮捕)
-1. [以名人拟赴美放记录哈马斯罪行影片](https://so.toutiao.com/search?keyword=以名人拟赴美放记录哈马斯罪行影片)
-1. [外交部：巴以冲突伤亡拷问人类良知](https://so.toutiao.com/search?keyword=外交部：巴以冲突伤亡拷问人类良知)
-1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
-1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
-1. [联合国18机构呼吁巴以人道主义停火](https://so.toutiao.com/search?keyword=联合国18机构呼吁巴以人道主义停火)
-1. [老人低消费坐店内被赶 快餐店回应](https://so.toutiao.com/search?keyword=老人低消费坐店内被赶+快餐店回应)
+1. [官方通报石家庄大桥拉索脱落原因](https://so.toutiao.com/search?keyword=官方通报石家庄大桥拉索脱落原因)
+1. [何立峰将访问美国](https://so.toutiao.com/search?keyword=何立峰将访问美国)
+1. [伊朗总统将于11月12日前往沙特](https://so.toutiao.com/search?keyword=伊朗总统将于11月12日前往沙特)
 1. [巴西女子拍下自己遭男友枪杀瞬间](https://so.toutiao.com/search?keyword=巴西女子拍下自己遭男友枪杀瞬间)
-1. [伊朗：美在巴以问题上没有保持中立](https://so.toutiao.com/search?keyword=伊朗：美在巴以问题上没有保持中立)
+1. [巴以冲突将消耗以510亿美元](https://so.toutiao.com/search?keyword=巴以冲突将消耗以510亿美元)
+1. [哈马斯发布迫击炮分队打击以军视频](https://so.toutiao.com/search?keyword=哈马斯发布迫击炮分队打击以军视频)
+1. [巴勒斯坦22岁活动家被以军逮捕](https://so.toutiao.com/search?keyword=巴勒斯坦22岁活动家被以军逮捕)
+1. [外交部：巴以冲突伤亡拷问人类良知](https://so.toutiao.com/search?keyword=外交部：巴以冲突伤亡拷问人类良知)
+1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [美国总统与以色列总理通话](https://so.toutiao.com/search?keyword=美国总统与以色列总理通话)
+1. [联黎部队担心黎以边境局势严重升级](https://so.toutiao.com/search?keyword=联黎部队担心黎以边境局势严重升级)
+1. [周边国家担忧加沙战火“引爆”中东](https://so.toutiao.com/search?keyword=周边国家担忧加沙战火“引爆”中东)
+1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
+1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
 1. [官方称体育馆坍塌与降雪有关](https://so.toutiao.com/search?keyword=官方称体育馆坍塌与降雪有关)
 1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
-1. [以色列计划永久占领加沙？中方回应](https://so.toutiao.com/search?keyword=以色列计划永久占领加沙？中方回应)
+1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
 1. [特朗普：为啥现在不谈乌克兰了](https://so.toutiao.com/search?keyword=特朗普：为啥现在不谈乌克兰了)
-1. [深圳国资委称万科具备足够的安全性](https://so.toutiao.com/search?keyword=深圳国资委称万科具备足够的安全性)
+1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
+1. [7旬老人花近5万按摩4根肋骨骨折](https://so.toutiao.com/search?keyword=7旬老人花近5万按摩4根肋骨骨折)
+1. [乐游原景甜一巴掌下去心疼100000%](https://so.toutiao.com/search?keyword=乐游原景甜一巴掌下去心疼100000%)
+1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
+1. [LNG打野Tarzan致歉](https://so.toutiao.com/search?keyword=LNG打野Tarzan致歉)
+1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
+1. [A股还会继续大涨吗](https://so.toutiao.com/search?keyword=A股还会继续大涨吗)
+1. [女孩与法国少年商场合奏惊艳外国人](https://so.toutiao.com/search?keyword=女孩与法国少年商场合奏惊艳外国人)
+1. [给闫妮吓得都不微醺了](https://so.toutiao.com/search?keyword=给闫妮吓得都不微醺了)
+1. [胡塞武装称再袭击以军事基地与机场](https://so.toutiao.com/search?keyword=胡塞武装称再袭击以军事基地与机场)
+1. [国际原油期货结算价小幅收涨](https://so.toutiao.com/search?keyword=国际原油期货结算价小幅收涨)
+1. [南京消防回应鼓楼医院天花板掉落](https://so.toutiao.com/search?keyword=南京消防回应鼓楼医院天花板掉落)
+1. [坍塌体育馆疑未按暴雪红警要求停业](https://so.toutiao.com/search?keyword=坍塌体育馆疑未按暴雪红警要求停业)
+1. [美媒：中国打击“杀猪”活动](https://so.toutiao.com/search?keyword=美媒：中国打击“杀猪”活动)
+1. [两架企图袭美军基地的无人机被击落](https://so.toutiao.com/search?keyword=两架企图袭美军基地的无人机被击落)
+1. [幼儿园厨师做菜的一天](https://so.toutiao.com/search?keyword=幼儿园厨师做菜的一天)
+1. [巴西父亲夺刀刺死威胁其孩子的摊贩](https://so.toutiao.com/search?keyword=巴西父亲夺刀刺死威胁其孩子的摊贩)
+1. [以名人拟赴美放记录哈马斯罪行影片](https://so.toutiao.com/search?keyword=以名人拟赴美放记录哈马斯罪行影片)
+1. [联合国18机构呼吁巴以人道主义停火](https://so.toutiao.com/search?keyword=联合国18机构呼吁巴以人道主义停火)
+1. [老人低消费坐店内被赶 快餐店回应](https://so.toutiao.com/search?keyword=老人低消费坐店内被赶+快餐店回应)
+1. [伊朗：美在巴以问题上没有保持中立](https://so.toutiao.com/search?keyword=伊朗：美在巴以问题上没有保持中立)
 1. [仁川联主帅：客战泰山队会更换战略](https://so.toutiao.com/search?keyword=仁川联主帅：客战泰山队会更换战略)
 1. [广东省惠州市纪委原书记李松被查](https://so.toutiao.com/search?keyword=广东省惠州市纪委原书记李松被查)
-1. [女生拍到男友登上房顶对列车告别](https://so.toutiao.com/search?keyword=女生拍到男友登上房顶对列车告别)
 1. [万科郁亮：黎明前总是最冷的时候](https://so.toutiao.com/search?keyword=万科郁亮：黎明前总是最冷的时候)
-1. [南京消防回应鼓楼医院天花板掉落](https://so.toutiao.com/search?keyword=南京消防回应鼓楼医院天花板掉落)
-1. [乐游原景甜一巴掌下去心疼100000%](https://so.toutiao.com/search?keyword=乐游原景甜一巴掌下去心疼100000%)
-1. [美国总统与以色列总理通话](https://so.toutiao.com/search?keyword=美国总统与以色列总理通话)
 1. [肺炎支原体感染好发于哪些人群](https://so.toutiao.com/search?keyword=肺炎支原体感染好发于哪些人群)
-1. [东北的风雪属实太猛了](https://so.toutiao.com/search?keyword=东北的风雪属实太猛了)
 1. [体育馆坍塌前2天当地曾部署防范暴雪](https://so.toutiao.com/search?keyword=体育馆坍塌前2天当地曾部署防范暴雪)
 1. [致传染病大爆发的“免疫落差”是啥](https://so.toutiao.com/search?keyword=致传染病大爆发的“免疫落差”是啥)
 1. [以军称黎武装组织向以发动猛烈攻击](https://so.toutiao.com/search?keyword=以军称黎武装组织向以发动猛烈攻击)
@@ -61,7 +76,6 @@
 1. [美否认支持以对巴勒斯坦人种族灭绝](https://so.toutiao.com/search?keyword=美否认支持以对巴勒斯坦人种族灭绝)
 1. [巴以冲突持续一月国际社会呼唤和平](https://so.toutiao.com/search?keyword=巴以冲突持续一月国际社会呼唤和平)
 1. [哈马斯在地道内存了多少弹药](https://so.toutiao.com/search?keyword=哈马斯在地道内存了多少弹药)
-1. [7旬老人花近5万按摩4根肋骨骨折](https://so.toutiao.com/search?keyword=7旬老人花近5万按摩4根肋骨骨折)
 1. [坍塌体育馆系当地招商引资项目](https://so.toutiao.com/search?keyword=坍塌体育馆系当地招商引资项目)
 1. [玉米地发现又胖又灵活的野生动物](https://so.toutiao.com/search?keyword=玉米地发现又胖又灵活的野生动物)
 1. [恒大地产再被强制执行4亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行4亿)
@@ -69,7 +83,6 @@
 1. [刚插油枪未加油就计费？加油站回应](https://so.toutiao.com/search?keyword=刚插油枪未加油就计费？加油站回应)
 1. [我的新人设是时宴](https://so.toutiao.com/search?keyword=我的新人设是时宴)
 1. [余承东称智界S7将超越特斯拉](https://so.toutiao.com/search?keyword=余承东称智界S7将超越特斯拉)
-1. [国际原油期货结算价小幅收涨](https://so.toutiao.com/search?keyword=国际原油期货结算价小幅收涨)
 1. [球馆坍塌家长哭喊“我儿子在里面”](https://so.toutiao.com/search?keyword=球馆坍塌家长哭喊“我儿子在里面”)
 1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
 1. [热刺1-4遭切尔西逆转 吞联赛首败](https://so.toutiao.com/search?keyword=热刺1-4遭切尔西逆转+吞联赛首败)
@@ -81,7 +94,6 @@
 1. [设计师做镂空羽绒服被吐槽冬冷夏热](https://so.toutiao.com/search?keyword=设计师做镂空羽绒服被吐槽冬冷夏热)
 1. [黑龙江鹤岗雪后路面变“镜面”](https://so.toutiao.com/search?keyword=黑龙江鹤岗雪后路面变“镜面”)
 1. [坍塌体育馆一楼为篮球乒乓球场](https://so.toutiao.com/search?keyword=坍塌体育馆一楼为篮球乒乓球场)
-1. [给闫妮吓得都不微醺了](https://so.toutiao.com/search?keyword=给闫妮吓得都不微醺了)
 1. [媒体评小姐姐报警称被旅游搭子抛弃](https://so.toutiao.com/search?keyword=媒体评小姐姐报警称被旅游搭子抛弃)
 1. [专家：不是所有冷空气都叫寒潮](https://so.toutiao.com/search?keyword=专家：不是所有冷空气都叫寒潮)
 1. [加沙医院院长：儿童需接受心理治疗](https://so.toutiao.com/search?keyword=加沙医院院长：儿童需接受心理治疗)
